pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  labels:
    run: my-nginx 
spec:
  containers:
    - name: myweb
      image: nginxdemos/hello
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
