route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    run: my-nginx
  name: my-nginx
spec:
  host: my-nginx-myproject.127.0.0.1.nip.io
  port:
    targetPort: my-nginx
  to:
    kind: Service
    name: my-nginx
    weight: 100
